--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -14,3 +14,21 @@
 .cover__link:hover {
     background: rgba(42, 44, 47, 0.8);
 }
+
+@media screen and (max-width: 1024px) {
+    .cover__link {
+        min-height: 640px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .cover__link {
+        min-height: 480px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .cover__link {
+        min-height: 200px;
+    }
+}
