--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -10,11 +10,19 @@
 @media screen and (max-width: 1024px) {
     .cover {
         margin: 92px 0 0;
+        min-height: 640px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .cover {
+        min-height: 480px;
     }
 }
 
 @media screen and (max-width: 320px) {
     .cover {
         margin: 16px 0 0;
+        min-height: 200px;
     }
 }
