--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -6,7 +6,7 @@
     align-items: flex-start;
     text-transform: uppercase;
     letter-spacing: 0.15em;
-    margin-top: 8px;
+    margin: 8px 0 0;
 }
 
 @media screen and (max-width: 768px) {
