--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,7 +1,7 @@
 .place__image {
     max-width: 460px;
     min-height: 460px;
-    margin: 0 0 32px;
+    margin: 0;
     object-fit: cover;
     object-position: center;
 }
