--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -11,7 +11,7 @@
     .place {
         grid-template-columns: 440px 456px;
         column-gap: 32px;
-        margin: 0 48px;
+        margin: 0 48px 80px;
     }
 }
 
